[package]
name = "argus"
version = "0.1.0"
edition = "2024"
description = "See what your tokens are hiding — a JWT security analysis toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Psyche919/argus"

[lib]
name = "argus"
path = "src/lib.rs"

[[bin]]
name = "argus"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"